# open_vins

./: CMakeLists.txt  publish_rosbag.py
config/euroc_mav/: estimator_config.yaml  kalibr_imucam_chain.yaml
config/sthereo/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ov_core/: CMakeLists.txt
ov_core/cmake/: non-ROS.cmake
ov_core/src/utils/: sensor_data.h
ov_eval/src/utils/: Recorder.h
ov_init/: CMakeLists.txt
ov_init/cmake/: non-ROS.cmake
ov_msckf/: CMakeLists.txt
ov_msckf/cmake/: ROS1.cmake  non-ROS.cmake
ov_msckf/launch/: subscribe.launch  subsrcibe_sthereo.launch
ov_msckf/src/: run_msckf.cpp  test_dataloader.cpp
ov_msckf/src/core/: VioManager.cpp  VioManager.h  VioManagerOptions.h
ov_msckf/src/dataloader/: DataLoader.hpp  ImageLoader.hpp  ImuLoader.hpp
ov_msckf/src/ros/: ROS1Visualizer.cpp  ROS1Visualizer.h
